--- a/Myitian.GIWishSimLib/Myitian.GIWishSimLib.csproj
+++ b/Myitian.GIWishSimLib/Myitian.GIWishSimLib.csproj
@@ -5,7 +5,9 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>Myitian</Authors>
-    <Description>参考自 https://www.bilibili.com/read/cv10468091 - 一棵平衡树</Description>
+    <Description>原神祈愿模拟库
+参考自 https://www.bilibili.com/read/cv10468091 - 一棵平衡树</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
